ctms-commons history
====================

1.0.0
-----

### core

- Backwards-incompatible change:  introduce ConfigurationProperty and
  ConfigurationProperties interfaces.  The classes which had these names
  are now called DefaultConfigurationProperty and
  DefaultConfigurationProperties.

### maven

- No projects use maven any longer, so all the maven mojos have been
  removed.  If you need one of the mojos, use the jar from an earlier
  ctms-commons release.

### testing

- Renamed modules "testing-all" to just "testing" and
  "testing-all:testing" to "testing:unit"

### acegi

- Backwards-incompatible change: Moved all the acegi-* modules into
  CTMS-specific packages so as not to conflict with CSM.  Mapping:
    gov.nih.nci.security (exact) -> gov.nih.nci.cabig.ctms.csmext
    gov.nih.nci.security.acegi.* -> gov.nih.nci.cabig.ctms.acegi.*

### all

- Begin formal changelog
- Convert from maven2 to buildr+ivy4r